--- a/_posts/2010-05-01-1-of-may.markdown
+++ b/_posts/2010-05-01-1-of-may.markdown
@@ -5,6 +5,7 @@ date: '2010-05-01 23:32:00'
 tags:
 - photoblog
 - russia
+image: /assets/images/2017/10/7e9db0694ebd74eb844960a592fe89dd.jpg
 ---
 
 В прошлый раз я попал на первомайскую демонстрацию случайно. Был дождь,&nbsp;пасмурно и охуенно. В этот раз я пошел злонамеренно, по договоренности с [Нарзотой](http://twitter.com/nowelet).
