--- a/_posts/2010-06-19-maydays.markdown
+++ b/_posts/2010-06-19-maydays.markdown
@@ -5,6 +5,7 @@ date: '2010-06-19 22:33:00'
 tags:
 - photoblog
 - russia
+image: /assets/images/2017/10/giants_by_shouldgo.jpg
 ---
 
 После достаточно клевой весны пришло совершенно ебучее бесполезное лето. Вот прощальные майские фоточки:
