--- a/_posts/2010-10-04-sosisnik.markdown
+++ b/_posts/2010-10-04-sosisnik.markdown
@@ -4,6 +4,7 @@ title: Сенсация!
 date: '2010-10-04 22:31:00'
 tags:
 - photoblog
+image: /assets/images/2017/10/3c701f10c162e63ad6fcc3daf5a09945.jpg
 ---
 
 Хуевый фотограф внезапно обрел себя в совершенно неожиданной сфере — алкоголизме. Поэтому,&nbsp;фоточки — говно, сосисник — говнище и трололо, а пиво было хорошее, ребята тоже вообще ребята:
