--- a/_posts/2010-10-16-hateday.markdown
+++ b/_posts/2010-10-16-hateday.markdown
@@ -5,6 +5,7 @@ date: '2010-10-16 22:59:00'
 tags:
 - photoblog
 - russia
+image: /assets/images/2017/10/1cfa5284d8954f57958fb311536ca963.jpg
 ---
 
 Ровно четыре часа понадобились двум ненавидящим людям,&nbsp;чтобы стереть эту ёбаную крысиную нору в мелкий монохромный порошок. Фотки делались для какого-то фотокросса, но до финиша ни одна не дошла. Ну и хуй с ними, главное — илитировать.
