--- a/_posts/2012-01-12-tomsk.markdown
+++ b/_posts/2012-01-12-tomsk.markdown
@@ -5,6 +5,7 @@ date: '2012-01-12 00:18:00'
 tags:
 - travel
 - russia
+image: /assets/images/2017/10/IMG_1481.jpg
 ---
 
 За первой частью всегда следует втрая, давайте и сегодня не будем переворачивать мир вверх тормашками.
