--- a/_posts/2012-04-01-photoblog-3.markdown
+++ b/_posts/2012-04-01-photoblog-3.markdown
@@ -5,6 +5,7 @@ date: '2012-04-01 19:37:00'
 tags:
 - russia
 - photoblog
+image: /assets/images/2017/10/360.13.7.jpg
 ---
 
 За прошедший месяц ничего толкового не написал и, что более печально, не снял. Причин тому целых три:
