--- a/_posts/2012-11-24-prague-t.markdown
+++ b/_posts/2012-11-24-prague-t.markdown
@@ -5,6 +5,7 @@ date: '2012-11-24 00:53:00'
 tags:
 - travel
 - europe
+image: /assets/images/2017/09/IMG_1268.jpg
 ---
 
 Будучи пару лет подряд лишенными нормального отпуска, мы планировали махнуть в солнечную Калифорнию (записаться, наконец, на службу в госдеп), но как-то не удалось.
