--- a/_posts/2013-01-05-huyaigest-2012.markdown
+++ b/_posts/2013-01-05-huyaigest-2012.markdown
@@ -5,6 +5,7 @@ date: '2013-01-05 20:08:00'
 tags:
 - photoblog
 - videos
+image: /assets/images/2017/09/IMG_7828.jpg
 ---
 
 В преддверии Нового года все кинулись ворошить прошлое и подводить итоги. Раньше я старательно избегал этой тухлой темы, но минувший год был действительно переломным. Раз все уже нопейсали, то я тем более не лох.
