--- a/_posts/2013-09-05-adalar.markdown
+++ b/_posts/2013-09-05-adalar.markdown
@@ -5,6 +5,7 @@ date: '2013-09-05 01:49:30'
 tags:
 - travel
 - asia
+image: /assets/images/2017/08/IMG_4351.jpg
 ---
 
 Что делать, если жаркий стамбульский полдень норовит растопить ваше тело, а выхлопные газы и запах жаренной рыбы наполняют легкие праведным гневом?
