--- a/_posts/2016-09-04-thai-life.markdown
+++ b/_posts/2016-09-04-thai-life.markdown
@@ -5,6 +5,7 @@ date: '2016-09-04 20:09:00'
 tags:
 - travel
 - asia
+image: /assets/images/2017/08/DSCF0497.jpg
 ---
 
 Теперь я официальный эксперт по Таиланду. Могу делать любые заявления, вы всё равно не проверите. Начну с предрассудков, которые привёз с собой:
