--- a/_posts/2018-10-23-kipr-1.markdown
+++ b/_posts/2018-10-23-kipr-1.markdown
@@ -7,6 +7,7 @@ tags:
 - europe
 - travel
 - photoblog
+image: /assets/images/2018/10/DSCF8901-1.jpg
 ---
 
 В этому году дважды побывал на Кипре, объездил остров во всех направлениях, сделал кучу фоток и миллион заметок. Информации столько, что придётся писать на два поста. Первый — экспозиция и основные города. [Второй]( __GHOST_URL__ /kipr-2/) — тайные места и север острова.
