--- a/_posts/2018-11-07-kipr-2.markdown
+++ b/_posts/2018-11-07-kipr-2.markdown
@@ -7,6 +7,7 @@ tags:
 - travel
 - photoblog
 - europe
+image: /assets/images/2018/11/DSCF5517.jpg
 ---
 
 Невероятно, но факт: на Кипре есть не только Ларнака и Айия-Напа. Всё самое интересное находится вдалеке от курортных городов. Когда устанете от пляжей и рыбных ресторанов, прочтите этот пост, арендуйте мотор и отправляйтесь в увлекательное путешествие по антикурортному маршруту.
