--- a/_posts/2020-04-26-italia.markdown
+++ b/_posts/2020-04-26-italia.markdown
@@ -6,6 +6,7 @@ date: '2020-04-26 19:07:30'
 tags:
 - europe
 - photoblog
+image: /assets/images/2020/04/IMG_5844-2.jpg
 ---
 
 Присоединяйтесь. Слов будет мало, потому что и без них грустно.
