--- a/_posts/2010-05-10-9-of-may.markdown
+++ b/_posts/2010-05-10-9-of-may.markdown
@@ -5,6 +5,7 @@ date: '2010-05-10 12:27:00'
 tags:
 - russia
 - photoblog
+image: /assets/images/2017/08/IMG_4865.jpg
 ---
 
 Фоток мало и все — говнище. Но это традиция. Буду тешиться тем,&nbsp;что даже у [Нехватита](http://twitter.com/nexvatit) с творческим фишаем получилось говно,&nbsp;пусть и чуть менее говеное:
