--- a/_posts/2012-12-09-berlin-tt.markdown
+++ b/_posts/2012-12-09-berlin-tt.markdown
@@ -5,6 +5,7 @@ date: '2012-12-09 10:41:00'
 tags:
 - travel
 - europe
+image: /assets/images/2017/09/IMG_1558.jpg
 ---
 
 Если нас попросят коротко и исчерпывающе описать Берлин, получится примерно следующее.
