--- a/_posts/2019-01-07-2k18.markdown
+++ b/_posts/2019-01-07-2k18.markdown
@@ -7,6 +7,7 @@ tags:
 - russia
 - travel
 - photoblog
+image: /assets/images/2019/01/DSCF9046.jpg
 ---
 
 Если коротко, прошедший год — это куча переездов, путешествий и кризисов. Пишу скорее для себя, чтобы отрефлексировать и выгрузить лишнее из оперативной памяти. Читать не обязательно.
