--- a/_posts/2020-05-12-germania-75.markdown
+++ b/_posts/2020-05-12-germania-75.markdown
@@ -6,6 +6,7 @@ date: '2020-05-12 10:40:21'
 tags:
 - europe
 - travel
+image: /assets/images/2020/05/DSCF3085.jpg
 ---
 
 Вторая Мировая закончилась 75 лет назад. Эту страшную историю нельзя забывать. А ещё нельзя на ней зацикливаться. Сегодня я покажу 75 фото и расскажу несколько истории из своих поездок по «проигравшей стране». Сравнения и выводы — на вашей совести.
