Claude code updates

--- a/_posts/2020-04-26-italia.markdown
+++ b/_posts/2020-04-26-italia.markdown
@@ -128,11 +128,11 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 Это не только родина пасты с томатами и мясным фаршем, но и старейший университетский центр Европы. А ещё — самая скушная точка моего маршрута, которая не запомнилась ничем.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2020/04/IMG_6474-1.jpg)
+![](/assets/images/2020/04/IMG_6474-1.jpg)
 
 Болонский университет открыли ещё в 1088 году. Он работает по сей день и делает Болонью магнитом для студентов из других регионов Италии и со всего мира.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2020/04/IMG_6478-1.jpg)
+![](/assets/images/2020/04/IMG_6478-1.jpg)
 
 Из-за большого количества молодёжи тысячелетний покой города нарушают повсеместные муралы и тэги, митинги сомнительного содержания и прочие атрибуты мятежной молодости.
 
@@ -184,7 +184,7 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 За несколько дней в этом сыром промозглом тупике цивилизации, я испытал всё — от полного разочарования до гротескного восторга и экстатической радости. Сперва хотел побыстрее уехать, затем — остаться как можно дольше, теперь — поскорее вернуться.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2020/04/IMG_6879-1.jpg)
+![](/assets/images/2020/04/IMG_6879-1.jpg)
 
 Весь город — лабиринт ржавых стен, которые непременно кончаются жидким агрегатным состоянием. Здесь невозможно ориентироваться даже по карте. Здесь ты всегда в тени и ждёшь момента, когда на ближайшей кампе тебя наконец скупым лучом местного солнца.
 
@@ -195,15 +195,15 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 Здесь тебе всегда рады только 425 человек — это гондольеры, которые берут за свои услуги ровно 100 евро. Число этих людей неизменно. Если решишь вступить в их гильдию — придётся ждать чьей-то смерти или хотя бы увольнения.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2020/04/IMG_6710-2.jpg)
+![](/assets/images/2020/04/IMG_6710-2.jpg)
 
 Здесь можно забыть, как выглядит машина или велосипед. Потому что передвигаться по островам лагуны можно только пешком. Между островами — на [вапоретто](https://ru.wikipedia.org/wiki/Вапоретто) или на водном такси. Ещё можно забыть о деревьях, равно как и о пустых улицах и площадях.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2020/04/IMG_6842-2.jpg)
+![](/assets/images/2020/04/IMG_6842-2.jpg)
 
 Здесь некуда спрятать глаза от невероятной красоты и полной гармонии естественного и искусственного. Прекрасно всё —&nbsp;от истерзаной голубями Пьяццы и до закутков Джуддеки. Здесь даже долгое ожидание вапоретто у холодной глади канала — самое красивое произведение в вашей жизни.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2020/04/IMG_6821-1.jpg)
+![](/assets/images/2020/04/IMG_6821-1.jpg)
 
 Венеция познакомила меня с Иосифом Александровичем Бродским. А он, как частый посетитель и почитатель местной эстетики, познакомил меня с той Венецией, которая навсегда влилась в память самым поэтичным местом на планете.
 
@@ -231,7 +231,7 @@ image: /assets/images/2020/04/IMG_5844-2.jpg
 
 Не стану вмешивать свой голос в нестройный хор людей, твердящих о величии и превосходстве италийских берегов над прочими туристическими направлениями. Но скажу, что Италия, какой я её помню — уникальное место и время. И ехать туда — обязательно.
 
-<figure class="kg-card kg-image-card kg-width-wide">![](/assets/images/2020/04/IMG_5992-1.jpg)
+![](/assets/images/2020/04/IMG_5992-1.jpg)
 
 Желаю стране скорейшего выздоровления, чтобы её пьяцца и кампы снова наполнились темпераментной речью, весёлым смехом, запахом выпечки и восхищёнными вздохами. Очень надеюсь, что эта пандемия не сможет сломать то самое — незаметное и незаменимое.
 
