--- a/_posts/2021-01-12-2k20.markdown
+++ b/_posts/2021-01-12-2k20.markdown
@@ -36,11 +36,11 @@ image: assets/images/2021/01/cover.jpeg
 
 Самые радостные вещи — подстаканники РЖД и ВНЖ в Польше
 
-По возвращении в Польшу нас ждал запоздалый новогодний подарок — Карты Побыту (временный вид на жительство) на два года. Заявление мы подали ещё в ноябре, а заветный пластик [получили только в марте](https://www.facebook.com/dima.afonin/posts/10221769052480238) — спустя почти четыре месяца (что по местным меркам довольно быстро). Зато теперь можем [жить в ЕС]( __GHOST_URL__ /love-poland/) без постоянных вылазок на родину за продлением рабочих виз.
+По возвращении в Польшу нас ждал запоздалый новогодний подарок — Карты Побыту (временный вид на жительство) на два года. Заявление мы подали ещё в ноябре, а заветный пластик [получили только в марте](https://www.facebook.com/dima.afonin/posts/10221769052480238) — спустя почти четыре месяца (что по местным меркам довольно быстро). Зато теперь можем [жить в ЕС]( https://shouldgo.me/love-poland/) без постоянных вылазок на родину за продлением рабочих виз.
 
 ## Побег из Чехии
 
-Чтобы отметить начало личной евроинтеграции и смыть горькое послевкусие большой родины, мы отправились любоваться пражской весной сквозь янтарь моравских вин. В Чехии я случался слишком часто, и даже написал [огромный пост]( __GHOST_URL__ /prague-czechia/) о жизни и о путешествиях по стране. Однако раз за разом возвращаюсь с огромным удовольствием, чего и вам советую.
+Чтобы отметить начало личной евроинтеграции и смыть горькое послевкусие большой родины, мы отправились любоваться пражской весной сквозь янтарь моравских вин. В Чехии я случался слишком часто, и даже написал [огромный пост]( https://shouldgo.me/prague-czechia/) о жизни и о путешествиях по стране. Однако раз за разом возвращаюсь с огромным удовольствием, чего и вам советую.
 
 - ![](/assets/images/2021/01/DSCF1753.jpg)
 - ![](/assets/images/2021/01/DSCF1756.jpg)
@@ -185,11 +185,11 @@ image: assets/images/2021/01/cover.jpeg
 
 Кроме непосредственно поездок, успел написать пяток неплохих фотобылин о путешествиях по Европе, которые случились в прошлой жизни:
 
-- [Как я жил в Праге и путешествовал по Чехии]( __GHOST_URL__ /prague-czechia/)
-- [Как я путешествовал по Италии, когда это ещё не звучало дико]( __GHOST_URL__ /italia/)
-- [Маленькое путешествие по Франции]( __GHOST_URL__ /petite-france/)
-- [75 фотографий из Германии]( __GHOST_URL__ /germania-75/)
-- [Как я влюбился и переехал в Польшу]( __GHOST_URL__ /love-poland/)
+- [Как я жил в Праге и путешествовал по Чехии]( https://shouldgo.me/prague-czechia/)
+- [Как я путешествовал по Италии, когда это ещё не звучало дико]( https://shouldgo.me/italia/)
+- [Маленькое путешествие по Франции]( https://shouldgo.me/petite-france/)
+- [75 фотографий из Германии]( https://shouldgo.me/germania-75/)
+- [Как я влюбился и переехал в Польшу]( https://shouldgo.me/love-poland/)
 
 ## Вернулись назад в 2021
 
@@ -199,6 +199,6 @@ image: assets/images/2021/01/cover.jpeg
 
 Очень надеюсь написать об этом в следующем годовом посте. До встречи!
 
-- [50 фотографий из 2019]( __GHOST_URL__ /2020/)
-- [50 фотокарточек из 2k18]( __GHOST_URL__ /2k18/)
-- [2017 в фотографиях]( __GHOST_URL__ /2017-in-50-photos/)
+- [50 фотографий из 2019]( https://shouldgo.me/2020/)
+- [50 фотокарточек из 2k18]( https://shouldgo.me/2k18/)
+- [2017 в фотографиях]( https://shouldgo.me/2017-in-50-photos/)
